--- a/external_consultant_data.html
+++ b/external_consultant_data.html
@@ -112,11 +112,8 @@
                 <h3>External Consultant Data</h3>
               </div>
               <div>
-                <button class="btn btnSuccess btn-sm mx-1">SAVE</button>
+                <button class="btn btnSecondary btn-sm mx-1">CANCEL</button>
                 <button class="btn btnPrimary btn-sm mx-1">SUBMIT</button>
-                <button class="btn btn-outline-danger btn-sm mx-1">
-                  CANCEL
-                </button>
               </div>
             </div>
             <div class="controlsContainer">
@@ -139,7 +136,7 @@
                     />
                   </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 px-md-4">
                   <div class="col mb-3">
                     <label for="fy-reco">Email</label>
                     <input
@@ -149,7 +146,7 @@
                     />
                   </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 px-md-4">
                   <div class="col mb-3">
                     <label for="fy-reco">Mobile Number</label>
                     <input
@@ -157,6 +154,82 @@
                       class="form-control"
                       placeholder="Enter Consultant Id"
                     />
+                  </div>
+                </div>
+                <div class="col-md-4 px-md-4">
+                  <div class="col mb-3">
+                    <label for="fy-reco">Gender</label>
+                    <input
+                      type="text"
+                      class="form-control"
+                      placeholder="Enter Consultant Id"
+                    />
+                  </div>
+                </div>
+                <div class="col-md-4 px-md-4">
+                  <div class="col mb-3">
+                    <label for="fy-reco">Birth Date</label>
+                    <input
+                      type="text"
+                      class="form-control"
+                      placeholder="Enter Birth Date"
+                    />
+                  </div>
+                </div>
+                <div class="col-md-4 px-md-4">
+                  <div class="col mb-3">
+                    <label for="fy-reco">Aadhar Number</label>
+                    <input
+                      type="text"
+                      class="form-control"
+                      placeholder="xxxx xxxx xxxx xxxx"
+                    />
+                  </div>
+                </div>
+                <div class="row border-right">
+                  <div class="col-md-6 px-md-4 border-right">
+                    <p class="textPrimaryDark font-14 mt-4">
+                      <strong>Address Details</strong>
+                    </p>
+                    <div>
+                      <label for="fy-reco">Full Address</label>
+                      <textarea
+                        name=""
+                        id=""
+                        cols="30"
+                        rows="3"
+                        class="form-control"
+                      ></textarea>
+                    </div>
+                    <div class="mt-3">
+                      <label for="fy-reco">State</label>
+                      <select id="inputState" class="form-control">
+                        <option selected>Choose...</option>
+                        <option>...</option>
+                      </select>
+                    </div>
+                    <div class="row">
+                      <div class="col-md-6 mt-3">
+                        <label for="fy-reco">City</label>
+                        <select id="inputState" class="form-control">
+                          <option selected>Choose...</option>
+                          <option>...</option>
+                        </select>
+                      </div>
+                      <div class="col-md-6 mt-3">
+                        <label for="fy-reco">Pin</label>
+                        <input
+                          type="text"
+                          class="form-control"
+                          placeholder="Enter Area Pin"
+                        />
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-6 px-md-4">
+                    <p class="textPrimaryDark font-14 mt-4">
+                      <strong>Skills</strong>
+                    </p>
                   </div>
                 </div>
               </div>
